[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/TextEditor.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 40.0
margin_right = 1008.0
margin_bottom = 580.0
smooth_scrolling = true
wrap_enabled = true
minimap_draw = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileDialog" type="FileDialog" parent="."]
margin_left = 16.0
margin_top = 36.0
margin_right = 500.0
margin_bottom = 416.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "/OneDrive/Documents/Projects/Godot/Godot Edit"
current_path = "/OneDrive/Documents/Projects/Godot/Godot Edit/"

[node name="SaveFileDialog" type="FileDialog" parent="."]
margin_left = 16.0
margin_top = 36.0
margin_right = 500.0
margin_bottom = 416.0
window_title = "Save File As"
resizable = true
access = 2
current_dir = "/OneDrive/Documents/Projects/Godot/Godot Edit"
current_path = "/OneDrive/Documents/Projects/Godot/Godot Edit/"

[node name="MenuButtonFile" type="MenuButton" parent="."]
margin_left = 16.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 32.0
text = "File"
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtonHelp" type="MenuButton" parent="."]
margin_left = 80.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 32.0
focus_mode = 2
text = "Help"
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpWindow" type="WindowDialog" parent="."]
margin_left = 320.0
margin_top = 208.0
margin_right = 640.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HelpWindow"]
margin_right = 320.0
margin_bottom = 176.0
text = "Placeholder"
align = 1
valign = 1
autowrap = true

[node name="HelpButton" type="Button" parent="HelpWindow"]
margin_left = 136.0
margin_top = 136.0
margin_right = 183.0
margin_bottom = 156.0
text = "Close"

[node name="AboutWindow" type="WindowDialog" parent="."]
margin_left = 320.0
margin_top = 208.0
margin_right = 640.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AboutWindow"]
margin_left = 72.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 104.0
text = "Placeholder"
align = 1
valign = 1
autowrap = true

[node name="AboutButton" type="Button" parent="AboutWindow"]
margin_left = 136.0
margin_top = 136.0
margin_right = 183.0
margin_bottom = 156.0
text = "Close"

[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="pressed" from="HelpWindow/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="AboutWindow/AboutButton" to="." method="_on_AboutButton_pressed"]
